--- a/BentaiDatabase/HentaiDatabase.csproj
+++ b/BentaiDatabase/HentaiDatabase.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Data.SQLite.Linq, Version=1.0.108.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Data.SQLite.Linq.1.0.108.0\lib\net46\System.Data.SQLite.Linq.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -69,6 +70,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataBaseStatistics.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="DataBaseStatistics.Designer.cs">
+      <DependentUpon>DataBaseStatistics.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main form.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +96,9 @@
     <Compile Include="ViewDatabase.Designer.cs">
       <DependentUpon>ViewDatabase.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="DataBaseStatistics.resx">
+      <DependentUpon>DataBaseStatistics.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Main form.resx">
       <DependentUpon>Main form.cs</DependentUpon>
     </EmbeddedResource>
