--- a/BentaiDatabase/HentaiDatabase.csproj
+++ b/BentaiDatabase/HentaiDatabase.csproj
@@ -13,6 +13,21 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -76,6 +91,12 @@
     <Compile Include="DataBaseStatistics.Designer.cs">
       <DependentUpon>DataBaseStatistics.cs</DependentUpon>
     </Compile>
+    <Compile Include="Front page.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Front page.Designer.cs">
+      <DependentUpon>Front page.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main form.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,6 +119,9 @@
     </Compile>
     <EmbeddedResource Include="DataBaseStatistics.resx">
       <DependentUpon>DataBaseStatistics.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Front page.resx">
+      <DependentUpon>Front page.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main form.resx">
       <DependentUpon>Main form.cs</DependentUpon>
@@ -134,6 +158,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\60271_143469_0.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.6.1 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Sagiri overload.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.108.0\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.108.0\build\net46\System.Data.SQLite.Core.targets')" />
